<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:background="#3980B8"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/arrow_back"/>
            <TextView
                android:id="@+id/team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/myprofile"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar_profile"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="2"
        android:padding="15dp">

        <ImageView
            android:id="@+id/perfil"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="6"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="false"
                android:inputType="textPersonName"
                android:padding="7dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="#134A63"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="false"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="#134A63"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/profile_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@color/white"
                android:hint="@string/ciudad"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_marginBottom="7dp"
                android:textColor="#134A63"
                android:padding="5dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/profile_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:digits="0123456789+"
                android:background="@color/white"
                android:hint="@string/phone_string"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_marginBottom="7dp"
                android:textColor="#134A63"
                android:padding="5dp"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/profile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@color/white"
                android:hint="@string/password"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_marginBottom="7dp"
                android:textColor="#134A63"
                android:padding="5dp"
                android:textSize="16sp"/>
            <Button
                android:id="@+id/profile_update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginBottom="7dp"
                android:padding="5dp"
                android:textSize="13sp"/>


        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>