<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    card_view:cardCornerRadius="5dp"
    android:backgroundTint="#E2EBF3">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="4"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/username"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:padding="2dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="left"
            android:padding="2dp"
            android:textSize="13sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/user_cargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cargo_laboral"
        android:padding="2dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="13sp"/>

    <ImageButton
        android:id="@+id/edit_e_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#8F9790"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/delete_e_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#434242"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</LinearLayout>

</androidx.cardview.widget.CardView>