<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedWork">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#3980B8"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/arrow_back"/>
            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="Datos de la obra"
                android:textSize="16sp"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E4DDF1"
    android:layout_below="@id/toolbar"
    android:clickable="true"
    android:focusableInTouchMode="true"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp"
    tools:cardCornerRadius="5dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="8"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/det_obra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_name"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/det_obra_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_name"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="#134A63"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:background="@drawable/border"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/det_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/det_direccion_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:background="@drawable/border"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/det_encargado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/det_encargado_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:background="@drawable/border"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/det_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_string"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/det_fecha_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_string"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:background="@drawable/border"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/det_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_string"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="13sp"/>
        <Spinner
            android:id="@+id/det_estado_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/det_equipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/det_equipo_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ver equipo"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="#134A63"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:background="@drawable/border"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/det_fotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/img_string"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/det_fotos_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ver imágenes"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:background="@drawable/border"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/det_notas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comentarios"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:textColor="#134A63"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="13sp"/>
        <EditText
            android:id="@+id/det_notas_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="Escribe aquí..."
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:textColor="#134A63"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:textSize="13sp"/>
    </LinearLayout>

</LinearLayout>

</androidx.cardview.widget.CardView>
</RelativeLayout>